[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultpy"
version = "1.1.2"
description = "Secure password manager"
requires-python = ">=3.10"

dependencies = [
    "typer",
]

[project.scripts]
vaultpy = "vaultpy.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]